# superheros

./: .env  .gitignore  .travis.yml  Cargo.toml  Dockerfile  README.md  docker-compose.yml
data/: charactersToComics_sanitized.csv  characters_sanitized.csv  characters_stats_sanitized.csv
migrations/2019-08-12-214904_create_comics/: down.sql  up.sql
robotframework/reports/: README.md
robotframework/tests/: Characters.json  Comics.json  superheros.robot
scripts/: run.sh
src/: db_connection.rs  logger.rs  main.rs  schema.rs
src/handlers/: comics.rs
src/models/: comics.rs
