[package]
authors = ["Uggla <uggla@free.fr>"]
edition = "2018"
name = "superheros"
version = "0.1.0"
[dependencies]
actix = "*"
actix-web = "*"
chrono = "*"
dotenv = "*"
futures = "*"
log = "*"
num_cpus = "*"
postgres = "*"
r2d2 = "*"
r2d2_postgres = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"

[dependencies.diesel]
features = ["postgres"]
version = "1.4.2"
